crates/flight-profile/tests/snapshots/snapshots__capability_limits_demo.snap
---
source: crates/flight-profile/tests/snapshots.rs
expression: demo
---
mode: Demo
limits:
  max_axis_output: 0.8
  max_ffb_torque: 20
  allow_high_torque: false
  max_expo: 0.6
  max_slew_rate: 50
audit_enabled: false
