crates/flight-profile/tests/snapshots/snapshots__capability_limits_full.snap
---
source: crates/flight-profile/tests/snapshots.rs
expression: full
---
mode: Full
limits:
  max_axis_output: 1
  max_ffb_torque: 50
  allow_high_torque: true
  max_expo: 1
  max_slew_rate: 100
audit_enabled: false
