crates/flight-profile/tests/snapshots/snapshots__default_profile_schema.snap
---
source: crates/flight-profile/tests/snapshots.rs
expression: profile
---
schema: flight.profile/1
sim: ~
aircraft: ~
axes: {}
pof_overrides: ~
