crates/flight-profile/tests/snapshots/snapshots__fully_populated_profile.snap
---
source: crates/flight-profile/tests/snapshots.rs
expression: profile
---
schema: flight.profile/1
sim: msfs
aircraft:
  icao: C172
axes:
  pitch:
    deadzone: 0.03
    expo: 0.2
    slew_rate: 1.2
    detents:
      - position: 0
        width: 0.05
        role: center
    curve:
      - input: 0
        output: 0
      - input: 0.5
        output: 0.4
      - input: 1
        output: 1
    filter:
      alpha: 0.3
      spike_threshold: 0.1
      max_spike_count: 3
  roll:
    deadzone: 0.02
    expo: 0.15
    slew_rate: ~
    detents: []
    curve: ~
    filter: ~
pof_overrides:
  landing:
    axes:
      pitch:
        deadzone: 0.05
        expo: 0.1
        slew_rate: ~
        detents: []
        curve: ~
        filter: ~
    hysteresis: ~
