crates/flight-profile/tests/snapshots/snapshots__template_airliner.snap
---
source: crates/flight-profile/tests/snapshots.rs
expression: profile
---
{
  "schema": "flight.profile/1",
  "sim": null,
  "aircraft": null,
  "axes": {
    "pitch": {
      "deadzone": 0.03,
      "expo": 0.25,
      "slew_rate": null,
      "detents": [],
      "curve": [
        {
          "input": 0.0,
          "output": 0.0
        },
        {
          "input": 0.25,
          "output": 0.1
        },
        {
          "input": 0.5,
          "output": 0.3
        },
        {
          "input": 0.75,
          "output": 0.6
        },
        {
          "input": 1.0,
          "output": 1.0
        }
      ],
      "filter": null
    },
    "roll": {
      "deadzone": 0.03,
      "expo": 0.2,
      "slew_rate": null,
      "detents": [],
      "curve": [
        {
          "input": 0.0,
          "output": 0.0
        },
        {
          "input": 0.25,
          "output": 0.1
        },
        {
          "input": 0.5,
          "output": 0.3
        },
        {
          "input": 0.75,
          "output": 0.6
        },
        {
          "input": 1.0,
          "output": 1.0
        }
      ],
      "filter": null
    },
    "speedbrake": {
      "deadzone": 0.02,
      "expo": null,
      "slew_rate": 3.0,
      "detents": [
        {
          "position": 0.0,
          "width": 0.04,
          "role": "retracted"
        }
      ],
      "curve": [
        {
          "input": 0.0,
          "output": 0.0
        },
        {
          "input": 1.0,
          "output": 1.0
        }
      ],
      "filter": null
    },
    "throttle_1": {
      "deadzone": 0.01,
      "expo": null,
      "slew_rate": 4.0,
      "detents": [
        {
          "position": 0.0,
          "width": 0.03,
          "role": "idle"
        },
        {
          "position": 0.95,
          "width": 0.03,
          "role": "toga"
        }
      ],
      "curve": [
        {
          "input": 0.0,
          "output": 0.0
        },
        {
          "input": 1.0,
          "output": 1.0
        }
      ],
      "filter": null
    },
    "throttle_2": {
      "deadzone": 0.01,
      "expo": null,
      "slew_rate": 4.0,
      "detents": [
        {
          "position": 0.0,
          "width": 0.03,
          "role": "idle"
        },
        {
          "position": 0.95,
          "width": 0.03,
          "role": "toga"
        }
      ],
      "curve": [
        {
          "input": 0.0,
          "output": 0.0
        },
        {
          "input": 1.0,
          "output": 1.0
        }
      ],
      "filter": null
    },
    "yaw": {
      "deadzone": 0.05,
      "expo": 0.1,
      "slew_rate": null,
      "detents": [],
      "curve": null,
      "filter": null
    }
  },
  "pof_overrides": null
}
