crates/flight-profile/tests/snapshots/snapshots__template_helicopter.snap
---
source: crates/flight-profile/tests/snapshots.rs
expression: profile
---
{
  "schema": "flight.profile/1",
  "sim": null,
  "aircraft": null,
  "axes": {
    "collective": {
      "deadzone": 0.01,
      "expo": null,
      "slew_rate": 3.0,
      "detents": [
        {
          "position": -1.0,
          "width": 0.05,
          "role": "flat_pitch"
        }
      ],
      "curve": [
        {
          "input": 0.0,
          "output": 0.0
        },
        {
          "input": 1.0,
          "output": 1.0
        }
      ],
      "filter": null
    },
    "cyclic_pitch": {
      "deadzone": 0.02,
      "expo": 0.15,
      "slew_rate": null,
      "detents": [],
      "curve": [
        {
          "input": 0.0,
          "output": 0.0
        },
        {
          "input": 0.25,
          "output": 0.1
        },
        {
          "input": 0.5,
          "output": 0.3
        },
        {
          "input": 0.75,
          "output": 0.6
        },
        {
          "input": 1.0,
          "output": 1.0
        }
      ],
      "filter": null
    },
    "cyclic_roll": {
      "deadzone": 0.02,
      "expo": 0.15,
      "slew_rate": null,
      "detents": [],
      "curve": [
        {
          "input": 0.0,
          "output": 0.0
        },
        {
          "input": 0.25,
          "output": 0.1
        },
        {
          "input": 0.5,
          "output": 0.3
        },
        {
          "input": 0.75,
          "output": 0.6
        },
        {
          "input": 1.0,
          "output": 1.0
        }
      ],
      "filter": null
    },
    "pedals": {
      "deadzone": 0.05,
      "expo": 0.1,
      "slew_rate": null,
      "detents": [],
      "curve": null,
      "filter": null
    }
  },
  "pof_overrides": null
}
